Добавление общих элементов

--- a/lk3.html
+++ b/lk3.html
@@ -257,7 +257,71 @@
             </div>
           </div>
           <div class="modal_line">
-
+            <a href="#" class="closebig"></a>
+            <h2>Поиск партнера</h2>
+            <div class="component_body">
+              <div class="line_param_input">
+                <div class="sortblock" style="margin-top: 20px">
+                  <div class="l_p">
+                    <div class="sortblock_param">
+                      <h5>Выбор дерева</h5>
+                      <div class="radio">
+                        <input class="custom-radio" type="radio" id="param1" name="param" value="Полное дерево">
+                        <label for="param1">Полное дерево</label>
+                      </div>
+                      <div class="radio">
+                        <input class="custom-radio" type="radio" id="param2" name="param" value="Директорское">
+                        <label for="param2">Директорское</label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="r_p">
+                    <div class="sortblock_param">
+                      <h5>Выбор активных / Всех</h5>
+                      <div class="radio">
+                        <input class="custom-radio" type="radio" id="param3" name="owner" value="Полное дерево">
+                        <label for="param3">Активное</label>
+                      </div>
+                      <div class="radio">
+                        <input class="custom-radio" type="radio" id="param4" name="owner" value="Директорское">
+                        <label for="param4">Все</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="line_param_input">
+                <div class="l_p">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Номер</label>
+                    <a href="#" class="line_param_down"></a>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Страна</label>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Фамилия</label>
+                  </div>
+                </div>
+                <div class="r_p">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Ранг на начало</label>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Город склада обслуживания</label>
+                  </div>
+                  <div class="nav_links">
+                    <a class="brd_green fill w50" href="#">Показать</a>
+                    <a class="brd_green w50 last" href="#" style="margin-right: 0">Сбросить</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
