--- a/lk4.html
+++ b/lk4.html
@@ -98,10 +98,17 @@
         </div>
         <div class="component">
           <div class="component_head">
-            <div class="component_head_sort">
-              <div class="line_param_input">
-                <label>Период от и до</label>
-                <input type="text" value="01.04.2020 - 09.09.2020" placeholder=""/>
+            <div class="component_head_sort" style="width: 100%">
+              <div class="line_param_input" style="width: 49%; float: left">
+                <div class="label_in">
+                  <input type="text" class="tinput" />
+                  <label class="tlabel">Тип операции</label>
+                  <span class="array_down"></span>
+                </div>
+              </div>
+              <div class="line_param_input" style="width: 49%; float: left; margin: 2px 0 0 15px">
+                <label style="font-size: 12px; color: #9A9A9A;">Период от и до</label>
+                <input type="text" value="Период от и до" placeholder=""/>
                 <span class="calendar"></span>
               </div>
             </div>
@@ -112,86 +119,87 @@
                 <ul>
                   <li><a href="#">Печать</a></li>
                   <li><a href="#">Экспорт в xls</a></li>
+                  <li><a href="#">Экспорт в pdf</a></li>
                 </ul>
               </div>
               <div class="middle_part">
                 <table>
                   <tr class="head_t">
-                    <th>Дата операции</th>
+                    <th style="width: 5%">Дата операции</th>
                     <th>На счет / Со счета</th>
                     <th>Тип операции</th>
                     <th>Комментарий</th>
-                    <th>Пользователь</th>
+                    <th>Итого на лицевом счете</th>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                   <tr class="tbody">
                     <td>01.03.2020</td>
                     <td>33547,9</td>
                     <td>Розничное вознаграждение</td>
                     <td>Розничное вознаграждение Розничная продажа 805903</td>
-                    <td>Администратор</td>
+                    <td>2334567</td>
                   </tr>
                 </table>
               </div>
