--- a/lk6.html
+++ b/lk6.html
@@ -92,7 +92,10 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <a href="#" class="back">Назад</a>
+          <div style="margin-bottom: 15px">
+            <img src="./images/back.svg" alt="" style="float: left; margin-right: 10px; cursor: pointer">
+            <a href="#" class="back" style="display: block">Возврат</a>
+          </div>
           <h1>Новый возврат</h1>
         </div>
         <div class="component">
@@ -110,115 +113,155 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th>Номер / Действия</th>
-                    <th>Дата</th>
-                    <th>Тип продаж</th>
-                    <th>№ покупателя</th>
-                    <th>Покупатель</th>
-                    <th>№ партнера</th>
-                    <th>Партнер</th>
-                  </tr>
+                    <tr class="head_t">
+                      <th style="width: 9%">
+                        <div>
+                          <span>Номер / Действия</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Дата</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Тип продаж</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>№ покупателя</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Покупатель</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>№ партнера</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Партнер</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Оператор</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Комментарий</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                    </tr>
                   </thead>
                   <tbody>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>921005</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Кондырев</td>
-                  </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>R2020-000228</span>
+                          <a href="#" class="lt3">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>R2020-000228</span>
+                          <a href="#" class="lt3">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>R2020-000228</span>
+                          <a href="#" class="lt3">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>R2020-000228</span>
+                          <a href="#" class="lt3">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>29.10.20</td>
+                      <td>Дистрибьюторская</td>
+                      <td>921005</td>
+                      <td>Круглова Л.А.</td>
+                      <td>805903</td>
+                      <td>Кондырев</td>
+                      <td>tt - test</td>
+                      <td>tt - test</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
