--- a/lk8.html
+++ b/lk8.html
@@ -120,53 +120,148 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th>Индикатор</th>
-                    <th>Группа товаров</th>
-                    <th>Артикул</th>
-                    <th style="width: 20%">Название</th>
-                    <th>Складская цена</th>
-                    <th>Дистрибьюторская цена</th>
-                    <th>Баллы</th>
+                    <tr class="head_t">
+                    <th style="width: 9%">
+                      <div>
+                        <span>Индикатор</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Группа товаров</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Артикул</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Название</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Складская цена</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Дистрибьюторская цена</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Баллы</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Количество на складе</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Количество доступное</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Количество с учетом поступления</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
                   </tr>
                   </thead>
                   <tbody>
-                  <tr>
-                    <td>2334</td>
-                    <td>VIP-продукция</td>
-                    <td>888345</td>
-                    <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
-                    <td>4538.94</td>
-                    <td>4538.94</td>
-                    <td>133</td>
-                  </tr>
-                  <tr>
-                    <td>2334</td>
-                    <td>VIP-продукция</td>
-                    <td>888345</td>
-                    <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
-                    <td>4538.94</td>
-                    <td>4538.94</td>
-                    <td>133</td>
-                  </tr>
-                  <tr>
-                    <td>2334</td>
-                    <td>VIP-продукция</td>
-                    <td>888345</td>
-                    <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
-                    <td>4538.94</td>
-                    <td>4538.94</td>
-                    <td>133</td>
-                  </tr>
-                  <tr>
-                    <td>2334</td>
-                    <td>VIP-продукция</td>
-                    <td>888345</td>
-                    <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
-                    <td>4538.94</td>
-                    <td>4538.94</td>
-                    <td>133</td>
-                  </tr>
+                    <tr>
+                      <td>2334</td>
+                      <td>VIP-продукция</td>
+                      <td>888345</td>
+                      <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
+                      <td>4538.94</td>
+                      <td>4538.94</td>
+                      <td>133</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                    </tr>
+                    <tr>
+                      <td>2334</td>
+                      <td>VIP-продукция</td>
+                      <td>888345</td>
+                      <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
+                      <td>4538.94</td>
+                      <td>4538.94</td>
+                      <td>133</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                    </tr>
+                    <tr>
+                      <td>2334</td>
+                      <td>VIP-продукция</td>
+                      <td>888345</td>
+                      <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
+                      <td>4538.94</td>
+                      <td>4538.94</td>
+                      <td>133</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                    </tr>
+                    <tr>
+                      <td>2334</td>
+                      <td>VIP-продукция</td>
+                      <td>888345</td>
+                      <td>Сок Чаги в подарочной коробке, с боярышником и соком березового</td>
+                      <td>4538.94</td>
+                      <td>4538.94</td>
+                      <td>133</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                      <td>2334</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -176,7 +271,9 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">Фильтры поиска</div>
+          <div class="title_line">
+            <div class="title_line_t search">Фильтры поиска</div>
+          </div>
           <div class="modal_line">
             <a href="#" class="closebig"></a>
             <h3>Фильтры поиска</h3>
@@ -185,6 +282,7 @@
                 <div class="label_in">
                   <input type="text" class="tinput" required />
                   <label class="tlabel" for>Поиск по группе товаров</label>
+                  <span class="array_down"></span>
                 </div>
               </div>
               <div class="r_p" style="float: right; padding-right: 0">
